--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -21,8 +21,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "cors": "^2.8.5",
+    "cross-fetch": "^3.1.5",
+    "dotenv": "^16.0.0",
     "express": "^4.16.4",
     "express-jwt": "^6.0.0",
+    "express-jwt-scope": "^0.1.0",
     "helmet": "^3.18.0",
     "highlight.js": "^10.0.3",
     "jwks-rsa": "^1.4.0",
