--- a/Sample-01/src/auth_config.json
+++ b/Sample-01/src/auth_config.json
@@ -2,6 +2,5 @@
   "domain": "dev-h1uc4uvp.us.auth0.com",
   "clientId": "wDUsOJsjqnJDuP7zMqZa1yd9Vm4x2LqF",
   "audience": "https://hawktest.com",
-  "scope": "update:current_user_metadata",
-  "appOrigin": "https://auth0-react-samples-pearl.vercel.app"
+  "scope": "update:current_user_metadata"
 }
