--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -15,6 +15,7 @@
     "dev": "npm-run-all --parallel spa api-server:dev",
     "prod": "npm-run-all --parallel server api-server"
   },
+  "homepage": "https://auth0-react-samples-pearl.vercel.app",
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@auth0/auth0-react": "^1.2.0",
